--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Título da página</title>
+    <title>LMDS - github page</title>
     <meta charset="utf-8">
   </head>
   <body>
-    ======{ bem vindo, 
+    ======{ bem vindo, </b>
     ======[ by }-S1R1-{
   </body>
 </html>
